--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Karunya Institute of Technology and Sciences, was founded with the noble vision 
  </fieldset></td>
  <td><pre>	</pre></td>
   <td>
-  <p><b>Contact Details</b><br>Addressline 1<br>Addressline 2<br>Addressline 3<br>Mailid : <a href="mailto:jpj09122001@gmail.com">austi2001@gmail.com</a><br>Phone Number : <a href="tel:7845963284">+985634218</a></p>
+  <p><b>Contact Details</b><br>Addressline 1<br>Addressline 2<br>Addressline 3<br>Mailid : <a href="mailto:austi2001@gmail.com">austi2001@gmail.com</a><br>Phone Number : <a href="tel:7845963284">+985634218</a></p>
   </td>
   <td>
   <pre>	
